# Step-Audio-EditX

./: Dockerfile  README.md  app.py  pyproject.toml  tts.py  tts_infer.py
scripts/: ReadMe.md  ReadMe_zh.md  run_edit_grpo.sh  run_edit_grpo_token_level.sh  run_edit_grpo_token_level_vllm.sh  run_edit_grpo_vllm.sh
src/: train_edit.py
src/dataset/: edit_dataset.py
src/utils/: reward_func.py  reward_func_gemini.py  reward_func_genrm.py  reward_func_token.py  reward_mos.py  run_server.sh
