[project]
name = "step-audio-editx"
version = "0.1.0"
description = "Step-Audio-EditX"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "funasr>=1.3.0",
    "gradio>=6.3.0",
    "hdbscan>=0.8.41",
    "hyperpyyaml>=1.2.3",
    "librosa>=0.11.0",
    "onnxruntime-gpu>=1.23.2",
    "openai-whisper>=20250625",
    "pytorch-memlab>=0.3.0",
    "rotary-embedding-torch>=0.8.9",
    "sox>=1.5.0",
    "torch-complex>=0.4.4",
    "torchcodec>=0.9.1",
    "transformers>=4.57.3",
    "typer>=0.21.1",
    "vllm",
    "whisper>=1.1.10",

    # --- 深度学习框架与加速 ---
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.23.0",
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.2",
    "deepspeed>=0.18.3",
    "trl>=0.26.2",
    "llmcompressor>=0.9.0",
    "cuda-toolkit",
    
    # --- 训练、数据与算子  ---
    "datasets>=4.0.0",
    "conformer>=0.3.2",
    "diffusers",
    "modelscope",
    "numpy>=2.2.6",
    "nvidia-cuda-nvrtc-cu12>=12.8.93",
    "omegaconf>=2.3.0",
    "protobuf>=5.29.3",
    "sentencepiece",
    "six>=1.16.0",
    "spaces>=0.42.1",
    "wandb",
    
    # --- 其他辅助 ---
    "matplotlib>=3.10.7",
    "pillow",
]

[tool.uv]
# Allow searching multiple indexes for best match
index-strategy = "unsafe-best-match"

[tool.uv.sources]
vllm = { url = "https://wheels.vllm.ai/c826c72a9633454679871fcb81fbc31fe03fb150/vllm-0.14.0rc2.dev125%2Bgc826c72a9-cp38-abi3-manylinux_2_31_x86_64.whl" }

